--- a/views/index.erb
+++ b/views/index.erb
@@ -1,49 +1,68 @@
 <!doctype html> 
 <html>
-<head>
-        <meta charset="utf-8">
-        <title>BBC News - Events</title>
+  <head>
+    <meta charset="utf-8">
+    <title>BBC News - Events</title>
 
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        <link rel="stylesheet" type="text/css" href="/stylesheets/reset.css">
-        <link rel="stylesheet" type="text/css" href="/stylesheets/default.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/reset.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/default.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/events.css">
 
-        <script type="text/javascript" src="/javascripts/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="/javascripts/jquery-1.7.2.min.js"></script>
 
-</head>
+  </head>
 
-        <body>
+  <body>
 
-                <div id='results'></div>
+    <div id='results'></div>
 
-                <header role="banner">
-                        <div id="global-header">
-                                <a href="http://www.bbc.co.uk">
-                                        <img src="/images/bbc_blocks.png" width="84" height="24" alt="British Broadcasting Corporation" />
-                                </a>
-                        </div>
-                        <div id="events-header">
-                                <h1>
-                                  <a href="http://www.bbc.co.uk/news">News</a>
-                                </h1>
-                        </div>
-                </header>
+    <header class="banner" role="banner">
+    <div id="global-header">
+      <a href="http://www.bbc.co.uk">
+        <img src="/images/bbc_blocks.png" width="84" height="24" alt="British Broadcasting Corporation" />
+      </a>
+    </div>
+    <div id="events-header">
+      <h1>
+        <a href="http://www.bbc.co.uk/news">News</a>
+      </h1>
+    </div>
+    </header>
 
-                <div id="container">
+    <div id="tab-wrapper" class="outer solid">
+      <div class="container">
+        <div id="index-tabs" class="tabs">
+          <ul>
+            <li class="tab-1 open">
+            <a href="#">Top Stories</a>
+            </li>
+            <li class="tab-2">
+            <a href="#">Most Read</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
-                  <%= @content %>
+    <div class="container">
+      <article>
+      <header class="article">
+        <h1>Event</h1>
+      </header>
+      <p><%= @content %></p>
+      </article>
+    </div>
 
-                </div>
+    <footer>
+    <div id="footer-content">
+      <p>BBC &copy; 2012</p>
+    </div>
+    </footer>
 
-                <footer>
-                        <div id="footer-content">
-                                <p>BBC &copy; 2012</p>
-                        </div>
-                </footer>
-
-               </body>
+  </body>
 </html> 
 
