--- a/views/index.erb
+++ b/views/index.erb
@@ -37,8 +37,10 @@
       <div class="container">
         <div id="index-tabs" class="tabs">
           <ul>
-            <li class="tab-1 open">
+            <li class="tab-1">
             <a href="#">Top Stories</a>
+            <li class="tab-1 open">
+            <a href="#">Specials</a>
             </li>
             <li class="tab-2">
             <a href="#">Most Read</a>
@@ -51,9 +53,21 @@
     <div class="container">
       <article>
       <header class="article">
-        <h1>Event</h1>
+        <h1>Article Title</h1>
       </header>
+
       <p><%= @content %></p>
+
+      <section class="sub">
+        <h2>People</h2>
+        <p>Lorem ipsum ...</p>
+      </section>
+
+      <section class="sub">
+        <h2>Places</h2>
+        <p>Lorem ipsum ...</p>
+      </section>
+
       </article>
     </div>
 
