Added routes to application and article main template

--- a/views/article.erb
+++ b/views/article.erb
@@ -37,10 +37,8 @@
       <div class="container">
         <div id="index-tabs" class="tabs">
           <ul>
-            <li class="tab-1">
-            <a href="#">Top Stories</a>
             <li class="tab-1 open">
-            <a href="#">Specials</a>
+            <a href="#">Top Stories</a>
             </li>
             <li class="tab-2">
             <a href="#">Most Read</a>
@@ -56,21 +54,9 @@
     <div class="container">
       <article>
       <header class="article">
-        <h1>Article Title</h1>
+        <h1>Event</h1>
       </header>
-
       <p><%= @content %></p>
-
-      <section class="sub">
-        <h2>People</h2>
-        <p>Lorem ipsum ...</p>
-      </section>
-
-      <section class="sub">
-        <h2>Places</h2>
-        <p>Lorem ipsum ...</p>
-      </section>
-
       </article>
       
       <section>
