Closed section elem

--- a/views/eventportal.erb
+++ b/views/eventportal.erb
@@ -9,6 +9,7 @@
           <p>Former fugitive tycoon Asil Nadir has been jailed for a total of 10 years for stealing 
           &pound;29m from his Polly Peck business empire 20 years ago.</p>
       </article>
+      </section>
       
       <section>
       <header class="section">
