--- a/views/eventportal.erb
+++ b/views/eventportal.erb
@@ -1,22 +1,26 @@
 
 
     <div class="container">
+      <nav>
+          <ol>
+              <li><a href="/event/arab_spring">Arab spring</a></li>
+          </ol>
+      </nav>
+      
       <section>
-      <header class="article">
-          <h2>Introduction</h2>
-      </header>
-      <article>
+          <header class="section">
+              <h2>Introduction</h2>
+          </header>
           <p>Former fugitive tycoon Asil Nadir has been jailed for a total of 10 years for stealing 
           &pound;29m from his Polly Peck business empire 20 years ago.</p>
-      </article>
       </section>
       
       <section>
-      <header class="section">
-        <h2>People involved</h2>
-      </header>
-      <ul>
-          <li>
+          <header class="section">
+            <h2>People involved</h2>
+          </header>
+          <ul>
+            <li>
               <figure>
                   <img src="/images/asilnadir.jpg" width="" height="" alt="" />
                   <figcaption>Asil Nadir</figcaption>
@@ -28,20 +32,39 @@
                   <p>Turkish Cypriot businessman, who was chief executive of Polly Peck, which he took over as a small textile company, 
                   growing it during the 1980s to become one of the United Kingdom's top 100 FTSE-listed companies.</p>
               <article>
-          </li>
-      </ul>
+            </li>
+          </ul>
       </section>
       
       <section>
-      <header class="section">
-        <h2>Places</h2>
-      </header>
+          <header class="section">
+            <h2>Places</h2>
+          </header>
+          <ul>
+              <li>London</li>
+          </ul>
       </section>
-    
+      
       <section>
-      <header class="article">
-        <h2>Events</h2>
-      </header>
+          <header class="section">
+            <h2>Latest articles</h2>
+          </header>
+          <ol>
+              <li><a href="/article/19209687">Asil Nadir: City conman with 'dangerous charisma'</a></li>
+              <li><a href="/article/19161940"> How Asil Nadir stole Polly Peck's millions</a></li>
+          </ol>          
+      </section>
+      
+      <section>
+          <header class="section">
+            <h2>Timeline</h2>
+          </header>
+      </section>
+      
+      <section>
+          <header class="section">
+            <h2>Picture gallery</h2>
+          </header>
       </section>
       
     </div>  
