--- a/views/article.erb
+++ b/views/article.erb
@@ -1,30 +1,19 @@
+<div class="container">
+  <article>
+  <header class="article">
+  <h1>Fear and Hunger amid battle for Aleppo</h1>
+  </header>
+  <p><%= @content %></p>
+  </article>
 
+  <%= erb :'modules/_people' %>
+  <%= erb :'modules/_places' %>
 
-    <div class="container">
-      <article>
-      <header class="article">
-        <h1>Event</h1>
-      </header>
-      <p><%= @content %></p>
-      </article>
-      
-      <section>
-      <header class="section">
-        <h2>People</h2>
-      </header>
-      </section>
-      
-      <section>
-      <header class="article">
-        <h2>Places</h2>
-      </header>
-      </section>
-    
-      <section>
-      <header class="article">
-        <h2>Events</h2>
-      </header>
-      </section>
-    </div>  
+  <section>
+  <header class="article">
+  <h2>Events</h2>
+  </header>
+  </section>
+</div>  
 
 
