Added polymap library and json and simulated.js test implementation files

--- a/views/event.erb
+++ b/views/event.erb
@@ -43,6 +43,9 @@
           <ul>
               <li>London</li>
           </ul>
+          <div id="map"></div>
+          <script src="/javascripts/polymaps.js"></script>
+          <script type="text/javascript" src="/javascripts/simulated.js"></script> 
       </section>
       
       <section>
