--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" type="text/css" href="/stylesheets/reset.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/default.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/news-lab-events-backstory.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/events.css">
 
     <script type="text/javascript" src="/javascripts/jquery-1.7.2.min.js"></script>
