--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/news-lab-events-backstory.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/events.css">
 
-    <script type="text/javascript" src="/javascripts/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" data-main="/javascripts/main" src="/javascripts/require-jquery.js"></script>
 
   </head>
 
