--- a/views/modules/_people.erb
+++ b/views/modules/_people.erb
@@ -2,6 +2,7 @@
 <header class="section">
 <h2>People involved</h2>
 </header>
+<div class="content">
 <ul>
   <li>
   <figure>
@@ -17,5 +18,6 @@
   <article>
   </li>
 </ul>
+</div>
 </section>
 
