--- a/views/modules/_places.erb
+++ b/views/modules/_places.erb
@@ -1,12 +1,14 @@
 <section class="places">
-    <header class="section">
-      <h2>Places</h2>
-    </header>
-    <ul>
-        <li>London</li>
-    </ul>
-    <div id="map"></div>
-    <script src="/javascripts/polymaps.js"></script>
-    <script type="text/javascript" src="/javascripts/simulated.js"></script> 
+<header class="section">
+<h2>Places</h2>
+</header>
+<div class="content">
+  <ul>
+    <li>London</li>
+  </ul>
+  <div id="map"></div>
+  <script src="/javascripts/polymaps.js"></script>
+  <script type="text/javascript" src="/javascripts/simulated.js"></script> 
+</div>
 </section>
 
