--- a/views/modules/_people.erb
+++ b/views/modules/_people.erb
@@ -1,21 +1,61 @@
-<section class="people">
+<section class="people open">
 <header class="section">
 <h2>People involved</h2>
 </header>
 <div class="content">
 <ul>
   <li>
-  <figure>
-  <img src="/images/asilnadir.jpg" width="" height="" alt="" />
-  <figcaption>Asil Nadir</figcaption>
-  </figure>
-  <article>
-  <header class="article">
-  <h3>Asil Nadir</h3>
-  </header>
-  <p>Turkish Cypriot businessman, who was chief executive of Polly Peck, which he took over as a small textile company, 
-  growing it during the 1980s to become one of the United Kingdom's top 100 FTSE-listed companies.</p>
-  <article>
+      <article>
+          <header class="article">
+              <h3>Bashar al-Assad</h3>
+          </header>
+          <ul>
+             <li>Name: Bashar al-Assad</li>
+             <li>Role: President of Syria</li>
+             <li>Description: President Bashar al-Assad of Syria is facing the most serious challenge 
+             to his rule since he came to power in 2000 following the death of his father, Hafez.</li>
+          </ul>
+      </article>
+      <figure>
+          <img src="/images/event/bashar-al-assad.jpg" width="95" height="95" alt="Bashar al-Assad" />
+          <figcaption>Bashar al-Assad</a></figcaption>
+      </figure>
+      <a href="http://www.bbc.co.uk/news/10338256">Profile</a>
+      
+  </li>
+  <li>
+      <article>
+          <header class="article">
+              <h3>Lakhdar Brahimi</h3>
+          </header>
+          <ul>
+             <li>Name: Lakhdar Brahimi</li>
+             <li>Role: UN Trouble-shooter</li>
+             <li>Description: The 78-year-old is an experienced operator in the Arab and Islamic worlds.</li>
+          </ul>
+      </article>
+      <figure>
+          <img src="/images/event/lakhdar-brahimi.jpg" width="95" height="95" alt="Lakhdar Brahimi" />
+          <figcaption><a href="http://www.bbc.co.uk/news/world-middle-east-13216195">Lakhdar Brahimi</a></figcaption>
+      </figure>
+  </li>
+   <li>
+      <article>
+          <header class="article">
+              <h3>Rami Makhlouf</h3>
+          </header> 
+          <ul>
+             <li>Name: Rami Makhlouf</li>
+             <li>Role: The most powerful economic figure in Syria</li>
+             <li>Description: Born in 1969, Mr Makhlouf took over the businesses built up by his father, Mohammed, 
+             the brother of Hafez al-Assad's wife, Anisa Makhlouf. After Bashar became president in 2000, Mr Makhlouf's 
+             financial empire expanded..</li>
+          </ul>               
+      </article>
+      <figure>
+          <img src="/images/event/rami-makhlouf.jpg" width="95" height="95" alt="Rami Makhlouf" />
+          <figcaption><a href="http://www.bbc.co.uk/news/world-middle-east-13216195">Rami Makhlouf</a></figcaption>
+      </figure>
   </li>
 </ul>
 </div>
