--- a/public/stylesheets/news-lab-events-backstory.css
+++ b/public/stylesheets/news-lab-events-backstory.css
@@ -1,3 +1,202 @@
+/* default.css */
+a, a:hover {
+  text-decoration: none;
+}
+p {
+  margin-bottom: 0.25em;
+}
+.blq-hide {
+  position: absolute;
+  left: -9999px;
+}
+#global-header, #events-header, #footer-content {
+  max-width: 976px;
+  margin: 0 auto;
+}
+
+/* Page header */
+header.banner{
+  background-color: #cd0102;
+}
+#global-header {
+  padding: 0.5em;
+  background-color: #520000;
+}
+#global-header img {
+  display: block;
+}
+#events-header {
+  color: #fff;
+  font-family: "Gill Sans";
+  text-transform: uppercase;
+}
+#events-header a {
+  color: #fff;
+  font-size: 4em;
+}
+#events-header .location {
+  font-size: 2em;
+  margin-left: 0.5em;
+}
+
+/* Page layout */
+.container {
+  overflow: hidden;
+  max-width: 976px;
+  margin: 0 auto;
+}
+section {
+  overflow: hidden;
+}
+
+/* Footer */
+footer {
+  color: #fff;
+  background-color: #666;
+}
+#footer-content {
+  padding: 1em 0;
+}
+#footer-content p {
+  margin: 0;
+}
+
+/* Tabs */
+.tabs {
+  position: relative;
+  clear: both;
+  display: block;
+  overflow: hidden;
+}
+.tabs ul {
+  width: 100%;
+  display: table;
+  margin: 0 auto;
+  padding: 0 8px 0 4px;
+}
+.tabs li {
+  display: inline;
+  float: left;
+  margin:2px 2px 0px 0px;
+  padding:10px;
+  background-color: lightgrey;
+}
+.tabs li a {
+  color:black;
+}
+.tabs li.open{
+  background-color:white;   
+}
+.solid{
+  background-color: darkgrey;
+}
+#tab-wrapper{
+  padding-top: 20px;
+}
+
+/* Events */
+html {
+	font-size: 10px;
+}
+
+body {
+	font-size: 1.4rem;
+}
+
+div#news-lab-events {
+	font-size: 1.8rem;
+}
+
+div#news-lab-events h1{
+	font-size: 4.8rem;
+	font-weight: 800;
+}
+
+div#news-lab-events nav.breadcrumb {
+    font-size: inherit;
+    width: 15%;
+    margin: 6px 0 6px 4px;    
+}
+
+div#news-lab-events nav.breadcrumb a {
+	display: block;
+	position: relative;
+	color: #505050;	
+	background-color: #dcdcdc;
+	padding: 6px;
+	height: 26px;
+}
+
+div#news-lab-events nav.breadcrumb a:after {
+	position: absolute;
+	top: 0;
+	left: 100%;
+	
+	content: ' ';
+	width: 0;
+	height: 0;
+	
+	border: 19px solid transparent;
+	border-left-color: #dcdcdc;
+}
+
+div#news-lab-events section {
+	font-size: inherit;
+	color: #505050;
+}
+div#news-lab-events section.intro header{
+	position: absolute;
+	top: -1000px;
+	left: 0;
+}
+div#news-lab-events section.places {
+	border-top-style: solid;
+	border-top-width: 3px;	
+    border-top-color: #fdb515;
+}
+div#news-lab-events section.people, div#news-lab-events section.timeline {
+	border-top-style: solid;
+	border-top-width: 3px;	
+	border-top-color: #759b75;
+}
+div#news-lab-events section.articles {
+	border-top-style: solid;
+	border-top-width: 3px;	
+	border-top-color: #cc0000;
+}
+
+div#news-lab-events section header.section h2 {
+	color: #505050;
+	background-color: #dcdcdc;
+	padding: 13px 0 11px 11px;
+	position: relative;
+}
+
+div#news-lab-events section header.section h2:after {
+	position: absolute;
+	top: 20px;
+	left: 90%;
+	
+	content: ' ';
+	width: 0;
+	height: 0;
+	
+	border: 19px solid transparent;
+	border-top-color: #505050;
+}
+
+div#news-lab-events section.people li {
+	background-color: #f0f0f0;
+	margin-bottom: 5px;
+}
+
+
+
+
+
+
+
+
 /* Polymap */
 svg {
     display: block;
