--- a/views/event.erb
+++ b/views/event.erb
@@ -1,11 +1,15 @@
-    <div class="container">
-      <nav>
+    <div class="container" id="news-lab-events">
+      <nav class="breadcrumb">
           <ol>
               <li><a href="/event/arab_spring">Arab spring</a></li>
           </ol>
       </nav>
       
-      <section>
+      <img src="/images/event/syria-crisis.jpg" width="320" height="186" alt="" />
+      
+      <h1>Syria crisis</h1>
+      
+      <section class="intro">
           <header class="section">
               <h2>Introduction</h2>
           </header>
@@ -16,7 +20,7 @@
       <%= erb :'modules/_people' %>
       <%= erb :'modules/_places' %>
       
-      <section>
+      <section class="articles open">
           <header class="section">
             <h2>Latest articles</h2>
           </header>
@@ -26,18 +30,18 @@
           </ol>          
       </section>
       
-      <section>
+      <section class="timeline open">
           <header class="section">
             <h2>Timeline</h2>
           </header>
+          <img src="/images/event/timeline-mockup.jpg" alt="" />
       </section>
       
-      <section>
+      <section class="picture-gallery closed">
           <header class="section">
             <h2>Picture gallery</h2>
           </header>
-      </section>
-      
+      </section>      
     </div>
 
 
