--- a/views/modules/_people.erb
+++ b/views/modules/_people.erb
@@ -20,8 +20,7 @@
           <img src="/images/event/bashar-al-assad.jpg" width="95" height="95" alt="Bashar al-Assad" />
           <figcaption>Bashar al-Assad</a></figcaption>
       </figure>
-      <a href="http://www.bbc.co.uk/news/10338256">Profile</a>
-      
+      <a href="http://www.bbc.co.uk/news/10338256" title="Profile of Bashar al-Assad">Profile</a>      
   </li>
   <li>
       <article>
@@ -38,6 +37,7 @@
           <img src="/images/event/lakhdar-brahimi.jpg" width="95" height="95" alt="Lakhdar Brahimi" />
           <figcaption><a href="http://www.bbc.co.uk/news/world-middle-east-13216195">Lakhdar Brahimi</a></figcaption>
       </figure>
+      <a href="#" title="Profile of Lakhdar Brahimi">Profile</a>
   </li>
    <li>
       <article>
@@ -56,6 +56,7 @@
           <img src="/images/event/rami-makhlouf.jpg" width="95" height="95" alt="Rami Makhlouf" />
           <figcaption><a href="http://www.bbc.co.uk/news/world-middle-east-13216195">Rami Makhlouf</a></figcaption>
       </figure>
+      <a href="#" title="Profile of Rami Makhlouf">Profile</a>
   </li>
 </ul>
 </div>
