--- a/public/stylesheets/events.css
+++ b/public/stylesheets/events.css
@@ -1,4 +1,3 @@
-/* default.css */
 a, a:hover {
   text-decoration: none;
 }
@@ -103,7 +102,10 @@ html {
 }
 
 body {
+	font-family: Arial,Verdana,Geneva,Helvetica,Sans-Serif;
 	font-size: 1.4rem;
+	-webkit-font-smoothing: antialiased;
+	
 }
 
 div#news-lab-events {
@@ -133,12 +135,10 @@ div#news-lab-events nav.breadcrumb a {
 div#news-lab-events nav.breadcrumb a:after {
 	position: absolute;
 	top: 0;
-	left: 100%;
-	
+	left: 100%;	
 	content: ' ';
 	width: 0;
-	height: 0;
-	
+	height: 0;		
 	border: 19px solid transparent;
 	border-left-color: #dcdcdc;
 }
@@ -175,17 +175,22 @@ div#news-lab-events section header.section h2 {
 	position: relative;
 }
 
-div#news-lab-events section header.section h2:after {
+div#news-lab-events section header h2:after {
 	position: absolute;
 	top: 20px;
-	left: 90%;
-	
+	left: 90%;	
 	content: ' ';
 	width: 0;
-	height: 0;
-	
+	height: 0;	
 	border: 19px solid transparent;
-	border-top-color: #505050;
+}
+
+div#news-lab-events section.open header h2:after {	
+	border-top-color: #505050;	
+}
+
+div#news-lab-events section.closed header h2:after {	
+	border-bottom-color: #505050;	
 }
 
 div#news-lab-events section.people li {
