--- a/views/event.erb
+++ b/views/event.erb
@@ -5,7 +5,10 @@
           </ol>
       </nav>
       
-      <img src="/images/event/syria-crisis.jpg" width="320" height="186" alt="" />
+      <figure id="main">
+          <img src="/images/event/syria-crisis.jpg" width="320" height="186" alt="" />
+          <figcaption>Bombing in a Syrian city</a></figcaption>
+      </figure>
       
       <h1>Syria crisis</h1>
       
@@ -16,6 +19,14 @@
           <p>Former fugitive tycoon Asil Nadir has been jailed for a total of 10 years for stealing 
           &pound;29m from his Polly Peck business empire 20 years ago.</p>
       </section>
+      
+      <article>
+          <a href="#">
+              <span class="cta">
+                  <span class="icon live"><b>Live</b></span> Displaced civilians
+              </span>
+          </a>          
+      </article>      
       
       <%= erb :'modules/_people' %>
       <%= erb :'modules/_places' %>
