--- a/views/event.erb
+++ b/views/event.erb
@@ -38,6 +38,12 @@
           <ol>
               <li><a href="/article/19209687">Asil Nadir: City conman with 'dangerous charisma'</a></li>
               <li><a href="/article/19161940"> How Asil Nadir stole Polly Peck's millions</a></li>
+              
+              <li><a href="/article/19161940"> How Asil Nadir stole Polly Peck's millions</a></li>
+              <li><a href="/article/19161940"> How Asil Nadir stole Polly Peck's millions</a></li>
+              <li><a href="/article/19161940"> How Asil Nadir stole Polly Peck's millions</a></li>
+              <li><a href="/article/19161940"> How Asil Nadir stole Polly Peck's millions</a></li>
+              <li><a href="/article/19161940"> How Asil Nadir stole Polly Peck's millions</a></li>
           </ol>          
       </section>
       
@@ -45,7 +51,12 @@
           <header class="section">
             <h2>Timeline</h2>
           </header>
-          <img src="/images/event/timeline-mockup.jpg" alt="" />
+          <h3>March 2011: Syrian Protests</h3>
+          <figure>
+              <img src="/images/event/timeline-mockup.jpg" alt="" />
+          </figure>
+          <p></p>
+          <a href="#">View detailed timeline</a>
       </section>
       
       <section class="picture-gallery closed">
