--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <link rel="stylesheet" type="text/css" href="/stylesheets/reset.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/events.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/events-core.css">
     <script type="text/javascript" data-main="/javascripts/main" src="/javascripts/require-jquery.js"></script>
     
   </head>
@@ -34,15 +34,13 @@
         <div id="index-tabs" class="tabs">
           <ul>
             <li class="tab-1">
-            <a href="#">Top Stories</a>
-            <li class="tab-1 open">
-            <a href="#">Specials</a>
+                <a href="#">Top Stories</a>
             </li>
             <li class="tab-2">
-            <a href="#">Most Read</a>
+                <a href="#">Most Read</a>
             </li>
-            <li class="tab-2">
-            <a href="#">Events</a>
+            <li class="tab-3 open">
+                <a href="#">Events</a>
             </li>
           </ul>
         </div>
