--- a/views/event.erb
+++ b/views/event.erb
@@ -5,27 +5,22 @@
           </ol>
       </nav>
       
-      <figure id="main">
-          <img src="/images/event/syria-crisis.jpg" width="320" height="186" alt="" />
-          <figcaption>Bombing in a Syrian city</a></figcaption>
-      </figure>
-      
-      <h1>Syria crisis</h1>
-      
-      <section class="intro">
+      <article class="intro">
           <header class="section">
-              <h2>Introduction</h2>
+              <h1>Syria crisis</h1>
           </header>
+          <figure id="main">
+            <img src="/images/event/syria-crisis_320.jpg" width="320" height="186" alt="" data-fullsrc="syria-crisis_640" />
+            <figcaption>Bombing in a Syrian city</a></figcaption>
+          </figure>
           <p>Former fugitive tycoon Asil Nadir has been jailed for a total of 10 years for stealing 
           &pound;29m from his Polly Peck business empire 20 years ago.</p>
-      </section>
-      
-      <article>
+
           <a href="#">
               <span class="cta">
-                  <span class="icon live"><b>Live</b></span> Displaced civilians
+                  <span class="icon live"><b>LIVE</b></span> Displaced civilians <time>1 hour ago</time>
               </span>
-          </a>          
+          </a> 
       </article>      
       
       <%= erb :'modules/_people' %>
@@ -33,7 +28,7 @@
       
       <section class="articles open">
           <header class="section">
-            <h2>Latest articles</h2>
+            <h2>Latest Articles</h2>
           </header>
           <ol>
               <li><a href="/article/19209687">Asil Nadir: City conman with 'dangerous charisma'</a></li>
@@ -60,7 +55,7 @@
       
       <section class="picture-gallery closed">
           <header class="section">
-            <h2>Picture gallery</h2>
+            <h2>Picture Gallery</h2>
           </header>
       </section>      
     </div>
