--- a/views/modules/_people.erb
+++ b/views/modules/_people.erb
@@ -1,6 +1,6 @@
 <section class="people open">
 <header class="section">
-<h2>People involved</h2>
+<h2>People</h2>
 </header>
 <div class="content">
 <ul>
@@ -10,17 +10,17 @@
               <h3>Bashar al-Assad</h3>
           </header>
           <ul>
-             <li>Name: Bashar al-Assad</li>
-             <li>Role: President of Syria</li>
-             <li>Description: President Bashar al-Assad of Syria is facing the most serious challenge 
+             <li><b>Name:</b> Bashar al-Assad</li>
+             <li><b>Role:</b> President of Syria</li>
+             <li><b>Description:</b> President Bashar al-Assad of Syria is facing the most serious challenge 
              to his rule since he came to power in 2000 following the death of his father, Hafez.</li>
-          </ul>
-      </article>
-      <figure>
-          <img src="/images/event/bashar-al-assad.jpg" width="95" height="95" alt="Bashar al-Assad" />
-          <figcaption>Bashar al-Assad</a></figcaption>
-      </figure>
-      <a href="http://www.bbc.co.uk/news/10338256" title="Profile of Bashar al-Assad">Profile</a>      
+          </ul>      
+          <figure>
+              <img src="/images/event/bashar-al-assad.jpg" width="95" height="95" alt="Bashar al-Assad" />
+              <figcaption>Bashar al-Assad</a></figcaption>
+          </figure>
+          <a href="http://www.bbc.co.uk/news/10338256" title="Profile of Bashar al-Assad" class="profile">Profile</a>
+      </article>      
   </li>
   <li>
       <article>
@@ -28,16 +28,16 @@
               <h3>Lakhdar Brahimi</h3>
           </header>
           <ul>
-             <li>Name: Lakhdar Brahimi</li>
-             <li>Role: UN Trouble-shooter</li>
-             <li>Description: The 78-year-old is an experienced operator in the Arab and Islamic worlds.</li>
-          </ul>
+             <li><b>Name:</b> Lakhdar Brahimi</li>
+             <li><b>Role:</b> UN Trouble-shooter</li>
+             <li><b>Description:</b> The 78-year-old is an experienced operator in the Arab and Islamic worlds.</li>
+          </ul>      
+          <figure>
+              <img src="/images/event/lakhdar-brahimi.jpg" width="95" height="95" alt="Lakhdar Brahimi" />
+              <figcaption><a href="http://www.bbc.co.uk/news/world-middle-east-13216195">Lakhdar Brahimi</a></figcaption>
+          </figure>
+          <a href="#" title="Profile of Lakhdar Brahimi" class="profile">Profile</a>
       </article>
-      <figure>
-          <img src="/images/event/lakhdar-brahimi.jpg" width="95" height="95" alt="Lakhdar Brahimi" />
-          <figcaption><a href="http://www.bbc.co.uk/news/world-middle-east-13216195">Lakhdar Brahimi</a></figcaption>
-      </figure>
-      <a href="#" title="Profile of Lakhdar Brahimi">Profile</a>
   </li>
    <li>
       <article>
@@ -45,18 +45,18 @@
               <h3>Rami Makhlouf</h3>
           </header> 
           <ul>
-             <li>Name: Rami Makhlouf</li>
-             <li>Role: The most powerful economic figure in Syria</li>
-             <li>Description: Born in 1969, Mr Makhlouf took over the businesses built up by his father, Mohammed, 
+             <li><b>Name:</b> Rami Makhlouf</li>
+             <li><b>Role:</b> The most powerful economic figure in Syria</li>
+             <li><b>Description:</b> Born in 1969, Mr Makhlouf took over the businesses built up by his father, Mohammed, 
              the brother of Hafez al-Assad's wife, Anisa Makhlouf. After Bashar became president in 2000, Mr Makhlouf's 
              financial empire expanded..</li>
-          </ul>               
+          </ul>      
+          <figure>
+              <img src="/images/event/rami-makhlouf.jpg" width="95" height="95" alt="Rami Makhlouf" />
+              <figcaption><a href="http://www.bbc.co.uk/news/world-middle-east-13216195">Rami Makhlouf</a></figcaption>
+          </figure>
+          <a href="#" title="Profile of Rami Makhlouf" class="profile">Profile</a>
       </article>
-      <figure>
-          <img src="/images/event/rami-makhlouf.jpg" width="95" height="95" alt="Rami Makhlouf" />
-          <figcaption><a href="http://www.bbc.co.uk/news/world-middle-east-13216195">Rami Makhlouf</a></figcaption>
-      </figure>
-      <a href="#" title="Profile of Rami Makhlouf">Profile</a>
   </li>
 </ul>
 </div>
