--- a/views/modules/_people.erb
+++ b/views/modules/_people.erb
@@ -14,12 +14,13 @@
              <li><b>Role:</b> President of Syria</li>
              <li><b>Description:</b> President Bashar al-Assad of Syria is facing the most serious challenge 
              to his rule since he came to power in 2000 following the death of his father, Hafez.</li>
-          </ul>      
+          </ul>     
           <figure>
               <img src="/images/event/bashar-al-assad.jpg" width="95" height="95" alt="Bashar al-Assad" />
               <figcaption>Bashar al-Assad</a></figcaption>
           </figure>
           <a href="http://www.bbc.co.uk/news/10338256" title="Profile of Bashar al-Assad" class="profile">Profile</a>
+          <br style="clear: both;">
       </article>      
   </li>
   <li>
@@ -37,6 +38,7 @@
               <figcaption><a href="http://www.bbc.co.uk/news/world-middle-east-13216195">Lakhdar Brahimi</a></figcaption>
           </figure>
           <a href="#" title="Profile of Lakhdar Brahimi" class="profile">Profile</a>
+          <br style="clear: both;">
       </article>
   </li>
    <li>
@@ -56,6 +58,7 @@
               <figcaption><a href="http://www.bbc.co.uk/news/world-middle-east-13216195">Rami Makhlouf</a></figcaption>
           </figure>
           <a href="#" title="Profile of Rami Makhlouf" class="profile">Profile</a>
+          <br style="clear: both;">
       </article>
   </li>
 </ul>
