--- a/views/article.erb
+++ b/views/article.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="news-lab-events">
   <article>
   <header class="article">
   <h1>Fear and Hunger amid battle for Aleppo</h1>
