--- a/public/stylesheets/events-core.css
+++ b/public/stylesheets/events-core.css
@@ -209,12 +209,13 @@ div#news-lab-events section.people, div#news-lab-events section.timeline {
 	border-top-color: #759b75;
 }
 div#news-lab-events section.people ul li {	
-	/*padding: 10px 0 5px 10px;*/
+	padding: 10px 0 5px 10px;
 	margin-bottom: 5px;
 	background-color: #f0f0f0;
+	overflow: auto;
 }
-div#news-lab-events section.people article {
-	position: relative;
+div#news-lab-events section.people ul li:last-child {
+	margin-bottom: 0;
 }
 div#news-lab-events section.people article header{
     position: absolute;
@@ -229,14 +230,15 @@ div#news-lab-events section.people article ul {
 }
 div#news-lab-events section.people article ul li {
     margin: 0;
+    padding: 0;
 }
 div#news-lab-events section.people article ul li b {
 	font-weight: 800;
 }
-div#news-lab-events section.people article div {}
 div#news-lab-events section.people article a.profile {
     display: block;    
     width: 95px;
+    height: 20px;
     font-size: 1.2rem;
     font-weight: 800;
     color: #ffffff;
