--- a/views/article.erb
+++ b/views/article.erb
@@ -9,10 +9,17 @@
   <%= erb :'modules/_people' %>
   <%= erb :'modules/_places' %>
 
-  <section>
-  <header class="article">
-  <h2>Events</h2>
-  </header>
+  <section class="timeline">
+      <header class="section">
+        <h2>Timeline</h2>
+      </header>
+      <div class="content">
+          <h3>March 2011: Syrian Protests</h3>
+          <figure>
+              <img src="/images/event/timeline-mockup.jpg" alt="" />
+          </figure>
+          <p><a href="#">View detailed timeline</a></p>
+      </div>          
   </section>
 </div>  
 
