--- a/views/event.erb
+++ b/views/event.erb
@@ -52,7 +52,7 @@
               <figure>
                   <img src="/images/event/timeline-mockup.jpg" alt="" />
               </figure>
-              <p><a href="#">View detailed timeline</a></p>
+              <a href="#" class="cta">View detailed timeline</a>
           </div>          
       </section>     
     </div>
