--- a/public/stylesheets/events-core.css
+++ b/public/stylesheets/events-core.css
@@ -101,7 +101,7 @@ header.banner{
 /* Page layout */
 .container {
   overflow: hidden;
-  max-width: 100%;
+  max-width: 320px;
   margin: 6px 0;
 }
 section {
@@ -119,7 +119,9 @@ div#news-lab-events nav.breadcrumb a {
 	color: #505050;	
 	background-color: #dcdcdc;
 	padding: 4px 0 4px 9px;
-	width: 20%;
+	min-width: 20%;
+	width: 30%;
+	white-space: nowrap;
 }
 div#news-lab-events nav.breadcrumb a:after {
 	position: absolute;
@@ -156,7 +158,6 @@ div#news-lab-events h2{
 	font-weight: 800;
 }
 div#news-lab-events article.intro p {
-	width: 75%;
 	font-size: 1.6rem;
 	line-height: 1.2;
 	margin: 6px 0 0 10px;	
@@ -223,10 +224,10 @@ div#news-lab-events section.people article header{
 }
 div#news-lab-events section.people article ul {
 	font-size: 1.4rem;
-	width: 50%;
+	width: 60%;
 	padding: 0;
 	float: right;
-	margin-right: 90px;
+	margin-right: 18px;
 }
 div#news-lab-events section.people article ul li {
     margin: 0;
@@ -277,13 +278,22 @@ div#news-lab-events section.articles ol li:nth-child(n) a:after {
 	font-weight: 700;
 	color: #f68b23;
 }
-/*
-div#news-lab-events section.timeline figure, 
-div#news-lab-events section.timeline a{
-	font-size: 2rem;
-	text-align: center;	
+div#news-lab-events section.timeline .content {
+	font-size: 1.4rem;
+	text-align: center;
+	background-color: #f0f0f0;
 }
-*/
+div#news-lab-events section.timeline h3 {
+	padding-top: 10px;
+	font-weight: 800;
+}
+div#news-lab-events section.timeline a.cta {
+	display: block;
+	color: #505050;
+	background-color: #dcdcdc;
+	font-weight: 800;
+	padding: 6px 0;	
+}
 /* Footer */
 footer {
   color: #fff;
