--- a/public/stylesheets/events-core.css
+++ b/public/stylesheets/events-core.css
@@ -111,6 +111,16 @@ div#news-lab-events nav.breadcrumb {
     font-size: inherit;
     margin-bottom: 6px;    
 }
+div#news-lab-events nav.breadcrumb:after {
+	content: ' ';
+	display: block;
+	width: 100%;
+	height: 0;
+	clear: both;
+}
+div#news-lab-events nav.breadcrumb li {
+	display: inline;
+}
 div#news-lab-events nav.breadcrumb a {
 	display: block;
 	position: relative;
@@ -122,6 +132,8 @@ div#news-lab-events nav.breadcrumb a {
 	min-width: 20%;
 	width: 30%;
 	white-space: nowrap;
+	float: left;
+	border: 1px solid #fff;
 }
 div#news-lab-events nav.breadcrumb a:after {
 	position: absolute;
