--- a/views/article.erb
+++ b/views/article.erb
@@ -1,25 +1,37 @@
-<div class="container" id="news-lab-events">
-  <article>
-  <header class="article">
-  <h1>Fear and Hunger amid battle for Aleppo</h1>
-  </header>
-  </article>
 
-  <%= erb :'modules/_people' %>
-  <%= erb :'modules/_places' %>
-
-  <section class="timeline">
-      <header class="section">
-        <h2>Timeline</h2>
-      </header>
-      <div class="content">
-          <h3>March 2011: Syrian Protests</h3>
-          <figure>
-              <img src="/images/event/timeline-mockup.jpg" alt="" />
-          </figure>
-          <p><a href="#">View detailed timeline</a></p>
-      </div>          
-  </section>
-</div>  
-
-
+	<div class="container" id="news-lab-events">
+      <nav class="breadcrumb">
+        <ol>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Arab Spring</a></li>
+            <li><a href="#">Syria Crisis</a></li>
+        </ol>
+      </nav>
+      
+      <article class="intro">
+        <header class="section">
+            <h1>Fear and Hunger amid battle for Aleppo</h1>
+        </header>
+        <figure id="main">
+          <img src="/images/event/aleppo_320.jpg" width="320" height="186" alt="" data-fullsrc="aleppo_640" />
+          <figcaption>Bombing in a Syrian city</a></figcaption>
+        </figure>
+        <p><%= @content %></p>        
+      </article>
+	
+	  <%= erb :'modules/_people' %>
+	  <%= erb :'modules/_places' %>
+	
+	  <section class="timeline">
+	      <header class="section">
+	        <h2>Timeline</h2>
+	      </header>
+	      <div class="content">
+	          <h3>March 2011: Syrian Protests</h3>
+	          <figure>
+	              <img src="/images/event/timeline-mockup.jpg" alt="" />
+	          </figure>
+	          <p><a href="#">View detailed timeline</a></p>
+	      </div>          
+	  </section>
+	</div>
