displaying title from event

--- a/views/event.erb
+++ b/views/event.erb
@@ -7,7 +7,7 @@
       
       <article class="intro">
           <header class="section">
-              <h1>Syria crisis</h1>
+          <h1><%= @event.title %></h1>
           </header>
           <figure id="main">
             <img src="/images/event/syria-crisis_320.jpg" width="320" height="186" alt="" data-fullsrc="syria-crisis_640" />
