pulling people from API

--- a/views/event.erb
+++ b/views/event.erb
@@ -13,8 +13,7 @@
             <img src="/images/event/syria-crisis_320.jpg" width="320" height="186" alt="" data-fullsrc="syria-crisis_640" />
             <figcaption>Bombing in a Syrian city</a></figcaption>
           </figure>
-          <p>Former fugitive tycoon Asil Nadir has been jailed for a total of 10 years for stealing 
-          &pound;29m from his Polly Peck business empire 20 years ago.</p>
+          <p><%= @event.description %></p>
 
           <a href="#">
               <span class="cta">
