--- a/views/article.erb
+++ b/views/article.erb
@@ -1,37 +1,61 @@
+<div class="container" id="news-lab-events">
+  <nav class="breadcrumb">
+  <ol>
+    <li><a href="#">Events</a></li>
+    <li><a href="#">Arab Spring</a></li>
+    <li><a href="#">Syria Crisis</a></li>
+  </ol>
+  </nav>
 
-	<div class="container" id="news-lab-events">
-      <nav class="breadcrumb">
-        <ol>
-            <li><a href="#">Events</a></li>
-            <li><a href="#">Arab Spring</a></li>
-            <li><a href="#">Syria Crisis</a></li>
-        </ol>
-      </nav>
-      
-      <article class="intro">
-        <header class="section">
-            <h1>Fear and Hunger amid battle for Aleppo</h1>
-        </header>
-        <figure id="main">
-          <img src="/images/event/aleppo_320.jpg" width="320" height="186" alt="" data-fullsrc="aleppo_640" />
-          <figcaption>Bombing in a Syrian city</a></figcaption>
-        </figure>
-        <p><%= @content %></p>        
-      </article>
-	
-	  <%= erb :'modules/_people' %>
-	  <%= erb :'modules/_places' %>
-	
-	  <section class="timeline">
-	      <header class="section">
-	        <h2>Timeline</h2>
-	      </header>
-	      <div class="content">
-	          <h3>March 2011: Syrian Protests</h3>
-	          <figure>
-	              <img src="/images/event/timeline-mockup.jpg" alt="" />
-	          </figure>
-	          <p><a href="#">View detailed timeline</a></p>
-	      </div>          
-	  </section>
-	</div>
+  <article class="intro">
+  <header class="section">
+  <h1>Fear and Hunger amid battle for Aleppo</h1>
+  </header>
+  <figure id="main">
+  <img src="/images/event/aleppo_320.jpg" width="320" height="186" alt="" data-fullsrc="aleppo_640" />
+  <figcaption>Bombing in a Syrian city</a></figcaption>
+</figure>
+<p><%= @content %></p>        
+</article>
+<section class="people">
+<header class="section">
+<h2>People</h2>
+</header>
+<div class="content">
+  <ul>
+    <li>
+    <article>
+    <header class="article">
+    <h3>Person</h3>
+    </header>
+    <ul>
+      <li><b>Name:</b> <span class="name">Person</span></li>
+      <li><b>Role:</b> President of Syria</li>
+      <li><b>Description:</b> President Bashar al-Assad of Syria is facing the most serious challenge 
+      to his rule since he came to power in 2000 following the death of his father, Hafez.</li>
+    </ul>     
+    <figure>
+    <img src="/images/event/bashar-al-assad.jpg" width="95" height="95" alt="Bashar al-Assad" />
+    <figcaption>Bashar al-Assad</a></figcaption>
+  </figure>
+  <a href="http://www.bbc.co.uk/news/10338256" title="Profile of Bashar al-Assad" class="profile">Profile</a>
+  </article>      
+  </li>
+</ul>
+</div>
+</section>
+<%= erb :'modules/_places' %>
+
+<section class="timeline">
+<header class="section">
+<h2>Timeline</h2>
+</header>
+<div class="content">
+  <h3>March 2011: Syrian Protests</h3>
+  <figure>
+  <img src="/images/event/timeline-mockup.jpg" alt="" />
+  </figure>
+  <p><a href="#">View detailed timeline</a></p>
+</div>          
+</section>
+        </div>
