CSS changes, added Latest Articles module

--- a/views/article.erb
+++ b/views/article.erb
@@ -1,15 +1,15 @@
-<div class="container" id="news-lab-events">
+<div class="container article" id="news-lab-events">
   <nav class="breadcrumb">
-  <ol>
-    <li><a href="#">Events</a></li>
-    <li><a href="#">Arab Spring</a></li>
-    <li><a href="#">Syria Crisis</a></li>
-  </ol>
+    <ol>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">Arab Spring</a></li>
+        <li><a href="#">Syria Crisis</a></li>
+    </ol>
   </nav>
 
   <article class="intro">
   <header class="section">
-  <h1>Fear and Hunger amid battle for Aleppo</h1>
+  <h1>Syria unrest: Arab League adopts sanctions in Cairo</h1>
   </header>
   <figure id="main">
   <img src="/images/event/aleppo_320.jpg" width="320" height="186" alt="" data-fullsrc="aleppo_640" />
@@ -59,3 +59,4 @@
 </div>          
 </section>
         </div>
+
