--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,15 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>BBC News - Events</title>
-
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/stylesheets/reset.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/events-core.css">
-    <script type="text/javascript" data-main="/javascripts/main" src="/javascripts/require-jquery.js"></script>
-    
+    <link rel="stylesheet" type="text/css" href="/stylesheets/events-core.css">    
+    <script type="text/javascript" data-main="/javascripts/main" src="/javascripts/require-jquery.js"></script>    
   </head>
 
   <body>
