--- a/public/stylesheets/events-core.css
+++ b/public/stylesheets/events-core.css
@@ -1,11 +1,11 @@
 html {
 	font-size: 10px;
+	-webkit-text-size-adjust: 100%;
 }
 body {
 	font-family: Helmet,Freesans,sans-serif;
 	font-weight: 400;
 	line-height: 1.4;
-	max-width: 640px;
 	background: none repeat scroll 0 0 #ffffff;
 	margin: 0 auto;	
 }
@@ -101,7 +101,6 @@ header.banner{
 /* Page layout */
 .container {
   overflow: hidden;
-  max-width: 320px;
   margin: 6px 0;
 }
 section {
@@ -128,9 +127,9 @@ div#news-lab-events nav.breadcrumb a {
 	font-weight: 800;
 	color: #505050;	
 	background-color: #dcdcdc;
-	padding: 4px 0 4px 9px;
+	padding: 5px 0 5px 9px;
 	min-width: 20%;
-	width: 30%;
+	width: 20%;
 	white-space: nowrap;
 	float: left;
 	border: 1px solid #fff;
@@ -279,6 +278,14 @@ div#news-lab-events section.articles li a {
 	background-color: #f0f0f0;	
 	margin-bottom: 1px;
 	padding: 16px 0 11px 7px;
+	width: 100%;
+}
+div#news-lab-events section.articles li a span {
+    display: block;
+    width: 90%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 div#news-lab-events section.articles ol li:nth-child(n) a:after {
 	content: counter(li);
@@ -368,3 +375,8 @@ text {
 circle {
   fill: red;
 }
+
+ 
+ 
+ 
+ 
