--- a/views/event.erb
+++ b/views/event.erb
@@ -24,24 +24,7 @@
       
       <%= erb :'modules/_people' %>
       <%= erb :'modules/_places' %>
-      
-      <section class="articles">
-          <header class="section">
-            <h2>Latest Articles</h2>
-          </header>
-          <div class="content">
-	          <ol>
-	              <li><a href="/article/19209687">Asil Nadir: City conman with 'dangerous charisma'</a></li>
-	              <li><a href="/article/19161940">How Asil Nadir stole Polly Peck's millions</a></li>              
-	              <li><a href="/article/15206245">Syrian troops 'kill Syrian farmer in Lebanon' </a></li>
-	              <li><a href="/article/19414144">Syrian rivals set for drawn-out conflict</a></li>
-	              <li><a href="/article/19107575">Jordan struggles with Syrian refugee influx </a></li>
-	              <li><a href="/article/18606341">Gunmen 'kill seven' at Syrian pro-Assad Ikhbariya TV </a></li>
-	              <li><a href="/article/17277160">Syrian government forces 'shell rebel-held towns' </a></li>
-	          </ol>
-	      </div>          
-      </section>
-      
+      <%= erb :'modules/_articles' %>      
       <section class="timeline">
           <header class="section">
             <h2>Timeline</h2>
