--- a/views/modules/_articles.erb
+++ b/views/modules/_articles.erb
@@ -5,7 +5,7 @@
           </header>
           <div class="content">
 	          <ol>
-	              <li><a href="/article/19209687"><span>Asil Nadir: City conman with 'dangerous charisma'</span></a></li>
+	              <li><a href="/article/15869914"><span>Syria unrest: Arab League sets observer ultimatum</span></a></li>
 	              <li><a href="/article/19161940"><span>How Asil Nadir stole Polly Peck's millions</span></a></li>              
 	              <li><a href="/article/15206245"><span>Syrian troops 'kill Syrian farmer in Lebanon'</span></a></li>
 	              <li><a href="/article/19414144"><span>Syrian rivals set for drawn-out conflict</span></a></li>
