--- a/views/article.erb
+++ b/views/article.erb
@@ -15,7 +15,40 @@
           <img src="/images/event/aleppo_320.jpg" width="320" height="186" alt="" data-fullsrc="aleppo_640" />
           <figcaption>Bombing in a Syrian city</a></figcaption>
       </figure>
-      <p><%= @content %></p>        
+      <p><%= @content %></p>
+      <!-- Content placeholder -->      
+      <!--
+	  <div class="page-header">
+	    <h2>
+	      Syria unrest: Arab League sets observer ultimatum
+	      <br>
+	      <small>Published in Middle East, 10 months ago</small>
+	    </h2>
+	    <p><a href="http://www.bbc.co.uk/news/world-middle-east-15869914">http://www.bbc.co.uk/news/world-middle-east-15869914</a></p>
+	  </div>
+      -->
+      <p>Syria is a few hours away from a deadline to allow an Arab League observer mission into the country or be subjected to sanctions.</p>
+      <p>The Arab League wants 500 observers to enter the country.</p>
+      <p>If Syria fails to sign an agreement in Cairo by 11:00 GMT, the Arab League says it will meet on Saturday to decide what sanctions to impose.</p>
+      <p>More than 3,500 people have died since anti-government protests began in March, the United Nations estimates.</p>
+      <p>The government of President Bashar al-Assad blames the violence on armed gangs and militants.</p>
+      <p>At least 40 people, including six children, have been killed across Syria in the past three days, activists say.</p>
+      <p>These reports are difficult to verify as foreign journalists are unable to move around Syria freely.</p>
+      <p>The options for sanctions include a suspension of commercial flights to Syria and a halt to all dealings with its central bank.</p>
+      <p>Earlier this month, the Arab League voted to suspend Syria and warned of unspecified sanctions for not implementing a peace plan.</p>
+      <p>One of the main sticking points was Damascus' demand to amend the proposal for the 500 observers to be allowed in to Syria.</p>
+      <p>Damascus reportedly wanted to reduce the number to 40 - a request rejected by the 22-member League.</p>
+      <p>In addition, a deadline for Syria to end its crackdown passed last Saturday night with no sign of the violence abating.</p>
+      <p>"Syria has not offered anything to move the situation forward," a senior league diplomat was quoted as saying by Reuters news agency on Thursday.</p>
+      <p>"The position of the Arab states is almost unified," he said, adding that all agreed there should be no civil war or foreign intervention.</p>
+      <p>The diplomats also appealed to the United Nations to prevent further violence, asking UN Secretary General Ban Ki-moon "to take all measures to support the efforts of the Arab League to resolve the critical situation in Syria".</p>
+      <p>The venue of Thursday's meeting in Cairo had to be moved away from the Arab League headquarters because of the continuing protests against Egypt's ruling military council in Tahrir Square.</p>
+      <p>Meanwhile, the head of opposition Free Syrian Army (FSA) group told the BBC that President Assad was now "finished".</p>
+      <p>Speaking from a refugee camp in Turkey, Riyad al-Asad said: "Even if the outside world doesn't help us or stand with us, the Syrian nation is determined to bring down this dictator."</p>
+      <p>"The system is rotten to the core. It looks strong, perhaps, on the outside but it is weak at the heart," the former colonel in the air force added.</p>
+      <p>The FSA was formed in August 2011 by army deserters.</p>
+      <p>Meanwhile, France has suggested that some sort of humanitarian protection zones be created inside Syria, the BBC's Jon Leyne in Cairo reports.</p>
+      <p>It is the first hint that international military intervention is under consideration, our correspondent adds.</p>         
   </article>
   
   <section class="people">
