--- a/public/stylesheets/events-core.css
+++ b/public/stylesheets/events-core.css
@@ -1,6 +1,5 @@
 html {
-	font-size: 10px;
-	-webkit-text-size-adjust: 100%;
+	font-size: 62.5%;
 }
 body {
 	font-family: Helmet,Freesans,sans-serif;
@@ -9,6 +8,13 @@ body {
 	background: none repeat scroll 0 0 #ffffff;
 	margin: 0 auto;	
 }
+
+@media screen and (orientation:landscape) {
+  html {
+    -webkit-text-size-adjust: none;
+  }
+}
+
 #blq-main {
     clear: both;
     margin-top: -1px;
@@ -129,10 +135,11 @@ div#news-lab-events nav.breadcrumb a {
 	background-color: #dcdcdc;
 	padding: 5px 0 5px 9px;
 	min-width: 20%;
-	width: 20%;
+	width: 25%;
 	white-space: nowrap;
 	float: left;
 	border: 1px solid #fff;
+	margin-right: 13px;
 }
 div#news-lab-events nav.breadcrumb a:after {
 	position: absolute;
@@ -144,6 +151,16 @@ div#news-lab-events nav.breadcrumb a:after {
 	border: 13px solid transparent;
 	border-left-color: #dcdcdc;
 }
+div#news-lab-events h1 {
+	font-size: 2.8rem;
+	line-height: 3rem;
+	font-weight: 800;
+	padding: 4px 5px 0 10px;	
+}
+div#news-lab-events h2{
+	font-size: 1.8rem;
+	font-weight: 800;
+}
 div#news-lab-events section, div#news-lab-events article {
 	font-size: inherit;
 	color: #505050;
@@ -151,22 +168,20 @@ div#news-lab-events section, div#news-lab-events article {
 }
 div#news-lab-events article.intro {
 	position: relative;
+	border-top: 1px solid #fff;
 }
-div#news-lab-events article.intro header{
-	position: absolute;
+div#news-lab-events article.intro header h1{
 	color: #000000;
     background: #ffffff;
-    top: 141px;
+    margin-top: 141px;
     width: 70%;
+    min-height: 4.5rem;
 }
-div#news-lab-events h1{
-	font-size: 3.2rem;
-	font-weight: 800;
-	padding: 4px 5px 0 10px;	
-}
-div#news-lab-events h2{
-	font-size: 1.8rem;
-	font-weight: 800;
+div#news-lab-events article.intro figure {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;	
 }
 div#news-lab-events article.intro p {
 	font-size: 1.6rem;
